# microbiology-burmese-rag

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  rag_pipeline.py  requirements.txt  utils.py
data/: microbiology.csv
notebooks/: dataset-upload.ipynb  evaluator.ipynb  experiments.ipynb  langsmith-rag.ipynb
